tests/fixtures/invalid/ord_bool.py
# Cannot call ord() with Bool
x = ord(True)
